--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.539.0",
     "next": "14.2.5",
     "react": "18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "18.3.1",
     "react-icons": "^4.12.0"
   },
