--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.539.0",
     "next": "14.2.5",
+    "particles.js": "^2.0.0",
     "react": "18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "18.3.1",
