--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,8 @@
     "react": "18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "18.3.1",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
