--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-input-mask": "^3.0.6",
     "autoprefixer": "^10.4.20",
     "openapi-typescript": "^6.5.4",
     "postcss": "^8.4.41",
