--- a/.github/workflows/db-seed.yml
+++ b/.github/workflows/db-seed.yml
@@ -39,35 +39,37 @@ jobs:
 
       - name: Wait up to 10m for complete OR detect failure
         run: |
-          set -euo pipefail
           JOB="${{ steps.create.outputs.job }}"
-          # Ждём complete, но не падаем, если не дождались
           kubectl -n "$NS" wait --for=condition=complete --timeout=10m "job/$JOB" || true
-          # Если job уже помечен как failed — быстро зафиксируем это
           kubectl -n "$NS" wait --for=condition=failed --timeout=1s "job/$JOB" || true
 
       - name: Collect diagnostics
         if: always()
         run: |
-          set -o pipefail
           JOB="${{ steps.create.outputs.job }}"
-          echo "== Job describe =="
-          kubectl -n "$NS" describe job "$JOB" || true
-          echo "== Pods list =="
-          kubectl -n "$NS" get pods -l job-name="$JOB" -o name || true
-          for p in $(kubectl -n "$NS" get pods -l job-name="$JOB" -o name); do
-            echo "--- logs $p ---"
-            kubectl -n "$NS" logs "$p" --all-containers --tail=-1 || true
-            echo "--- describe $p ---"
-            kubectl -n "$NS" describe "$p" || true
-          done
+          if [ -n "$JOB" ]; then
+            echo "== Job describe =="
+            kubectl -n "$NS" describe job "$JOB" || true
+            echo "== Pods list =="
+            kubectl -n "$NS" get pods -l job-name="$JOB" -o name || true
+            for p in $(kubectl -n "$NS" get pods -l job-name="$JOB" -o name); do
+              echo "--- logs $p ---"
+              kubectl -n "$NS" logs "$p" --all-containers || true
+              kubectl -n "$NS" logs "$p" --all-containers --previous || true
+              echo "--- describe $p ---"
+              kubectl -n "$NS" describe "$p" || true
+            done
+          else
+            echo "Job was not created"
+          fi
           echo "== Recent events =="
           kubectl -n "$NS" get events --sort-by=.lastTimestamp | tail -n 200 || true
 
       - name: Fail if job did not succeed
+        if: steps.create.outputs.job != ''
         run: |
           s=$(kubectl -n "$NS" get job "${{ steps.create.outputs.job }}" -o jsonpath='{.status.succeeded}')
-          if [[ "$s" != "1" ]]; then
+          if [ "$s" != "1" ]; then
             echo "Seed job did not complete successfully" >&2
             exit 1
           fi
